# mrp_calculo

./: README.md  pyproject.toml
mrp_calculo/: __init__.py  __main__.py  algoritmo_original.py  core.py
