
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mrp_calculo"
version = "0.1.0"
description = "Cálculo dos indicadores do MRP com base no código original fornecido."
authors = [
  { name="Seu Nome", email="seu.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas", "numpy", "openpyxl"]

[project.scripts]
mrp_calculo = "mrp_calculo.__main__:main"
